--- a/GoogleMapsEverywhere/build.gradle
+++ b/GoogleMapsEverywhere/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "20.0.0"
 
     defaultConfig {
-        applicationId "com.goncalossilva.googlemapsandroid"
+        applicationId "com.goncalossilva.googlemapseverywhere"
         minSdkVersion 9
         targetSdkVersion 19
         versionCode 1
